# libpngloader

./: .gitignore  Makefile.am  README.MD  configure.ac
doc/: .gitignore  pngloader.tex  pngloader.texi
include/: pngloader.h
src/: pngloader.c  resources.rc
tests/: t_chunk_error  t_compress_error  t_empty_error  t_file_error  t_load16bpc  t_png_error  tpngloader16.c  tpngloader24.c  tpngloader32.c  tpngloader8.c
